--- a/admin.html
+++ b/admin.html
@@ -1985,7 +1985,7 @@
         <section class="content-view" id="viewMessages">
           <div class="section-header">
             <div>
-              <h3>Messages</h3>
+              <h3><i class="fa-solid fa-envelope"></i> Messages</h3>
               <p class="text-muted">Contact form submissions &amp; customer inquiries</p>
             </div>
             <div class="section-header-actions">
@@ -2038,7 +2038,7 @@
 
           <!-- Messages List -->
           <div class="messages-list" id="messagesList">
-            <div class="text-center text-muted" style="padding:2rem;">Loading messages...</div>
+            <div class="messages-empty">Loading messages...</div>
           </div>
 
           <!-- Messages Pagination -->
